# crewai-groq-llama3

./: 192-crewai-groq-llama3.ipynb  index.html  pyproject.toml
app/: multiagent.py
