[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["julio4ai <juliocolomer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

crewai = "0.28.8"
beautifulsoup4 = "^4.12.3"
langchain-groq = "^0.1.3"
certifi = "^2025.8.3"
pydantic = ">=2.4.2,<3.0.0"
langchain = ">=0.1.0,<0.2.0"
python-dotenv = "1.0.0"
openai = ">=1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
